--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--ThirdParty-->
-
     <!--GoogleFonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
@@ -19,6 +18,7 @@
     <link rel="stylesheet" href="css/owlCarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owlCarousel/owl.theme.default.min.css">
 
+
     <!--ThirdParty-->
 
 
@@ -29,10 +29,10 @@
     <link rel="stylesheet" href="css/productLayout.css">
 
     <title>Hello, world!</title>
-  </head>
-  <body class="h-100">
-      <div class="back-up-arrow"> <a href="#"><i class="fas fa-chevron-up"></i></a> </div>
-      <header>
+</head>
+<body class="h-100">
+    <div class="back-up-arrow"> <a href="#"><i class="fas fa-chevron-up"></i></a> </div>
+    <header>
         <div class="header-container-desktop d-lg-block d-none">
             <div class="header-top-bar">
                 <div class="container h-100">
@@ -51,7 +51,7 @@
                                 <a class="top-bar-item-link" href="#">O nás</a>
                             </div>
                         </div>
-                        <div class="col top-bar-right">
+                        <div class="col top-bar-right p-0">
                             <div class="top-bar-item">
                                 <a class="top-bar-item-link" href="#">O nás</a>
                             </div>
@@ -62,7 +62,16 @@
                                 <a class="top-bar-item-link" href="#">O nás</a>
                             </div>
                             <div class="top-bar-item">
-                                <a class="top-bar-item-link" href="#">O nás</a>
+                                <form class="language-form">
+                                    <div class="select-div">
+                                        <select name="language-select" id="language-select">
+                                            <option value="language-1"> Jazyk: Čeština </span> </option>
+                                            <option value="language-2"> Language: English </option>
+                                            <option value="language-3"> Język: Polski </option>
+                                        </select>
+                                    </div>
+                                    
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -518,8 +527,8 @@
                 </div>
             </nav>
         </div>
-      </header>
-      <main>
+    </header>
+    <main>
         <!--Homepage welcome section with carousel-->
         <section class="homepage-header w-100">
             <article>
@@ -2932,16 +2941,7 @@
     </footer>
 
 
-
-
-
-
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
