--- a/layout_3cols_left-bar.html
+++ b/layout_3cols_left-bar.html
@@ -569,10 +569,73 @@
                                                 
                                                 <form class="filtres-form" method="post">
 
+
                                                     <div class="layout-aside-component pb-3">
                                                         <label class="simple-dropdown-controll" >
-                                                            <h6 class="component-header">Značka</h6>
                                                             <input type="checkbox" class="simple-dropdown"/>
+                                                            <h6 class="component-header">Kategorie <i class="fas fa-chevron-up header-icon"></i> </h6>
+                                                            <div class="component-wrapper mb-3">
+                                                                <!--Kategorie s podkategorií-->
+                                                               <label class="simple-dropdown-controll" >
+                                                                    <input type="checkbox" class="simple-dropdown"/>
+                                                                    <a href="#" class="cat-header-link"><h6 class="cat-header">Kategorie s podkategorií </h6> </a> <div class="plus-icon"> <div class="plus-group"> <div class="vertical"></div><div class="horizontal"></div> </div>  </div>
+                                                                    <div class="subcat-wrapper">
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                    </div>  
+                                                                </label> 
+
+                                                                <label class="simple-dropdown-controll" >
+                                                                    <input type="checkbox" class="simple-dropdown"/>
+                                                                    <a href="#" class="cat-header-link"><h6 class="cat-header">Kategorie s podkategorií </h6> </a> <div class="plus-icon"> <div class="plus-group"> <div class="vertical"></div><div class="horizontal"></div> </div>  </div>
+                                                                    <div class="subcat-wrapper">
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                        <label class="simple-dropdown-controll" >
+                                                                            <input type="checkbox" class="simple-dropdown"/>
+                                                                            <a href="#" class="cat-header">Kategorie s podkategorií</a><div class="plus-icon"> <div class="plus-group"> <div class="vertical"></div><div class="horizontal"></div> </div>  </div>
+                                                                            <div class="subcat-wrapper">
+                                                                                <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                                <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                                <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                                <label class="simple-dropdown-controll" >
+                                                                                    <input type="checkbox" class="simple-dropdown"/>
+                                                                                    <a href="#" class="cat-header">Kategorie s podkategorií</a><div class="plus-icon"> <div class="plus-group"> <div class="vertical"></div><div class="horizontal"></div> </div>  </div>
+                                                                                    <div class="subcat-wrapper">
+                                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie ddddddddddsdsdsdsdgfgg sfdsdfdf sdsd</a>
+                                                                                    </div>  
+                                                                                </label> 
+                                                                                <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                                <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                            </div>  
+                                                                        </label> 
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                        <a href="#" class="subcat-wrapper-link">Nějaká úžasná podkategorie</a>
+                                                                    </div>  
+                                                                </label> 
+
+                                                                <!--Samostatná kategorie-->
+                                                                <a href="#"><h6 class="cat-header">Kategorie</h6></a>
+
+
+                                                            </div>  
+                                                        </label>                                                       
+                                                    </div>
+
+                                                    <div class="layout-aside-component pb-3">
+                                                        <label class="simple-dropdown-controll" >
+                                                            <input type="checkbox" class="simple-dropdown"/>
+                                                            <h6 class="component-header">Značka <i class="fas fa-chevron-up header-icon"></i></h6>
                                                             <div class="component-wrapper">
                                                                 <ul class="checkbox-list-filter">
                                                                     <li>
@@ -619,11 +682,11 @@
 
                                                     <div class="layout-aside-component pb-3">
                                                         <label class="simple-dropdown-controll" >
-                                                            <h6 class="component-header">Barva</h6>
                                                             <input type="checkbox" class="simple-dropdown"/>
+                                                            <h6 class="component-header">Barva <i class="fas fa-chevron-up header-icon"></i> </h6>
                                                             <div class="component-wrapper">
                                                                 <div class="color-filter-container">
-                                                                    <div class="custom-check color-blue">
+                                                                    <div class="custom-check color-1">
                                                                         <label class="custom-check-container">
                                                                             <input type="checkbox" name="colorCheck1" id="colorCheck1">
                                                                             <span class="custom-check"></span>
@@ -631,7 +694,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="color-filter-container">
-                                                                    <div class="custom-check color-red">
+                                                                    <div class="custom-check color-2">
                                                                         <label class="custom-check-container">
                                                                             <input type="checkbox" name="colorCheck2" id="colorCheck2">
                                                                             <span class="custom-check"></span>
@@ -639,7 +702,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="color-filter-container">
-                                                                    <div class="custom-check color-yellow">
+                                                                    <div class="custom-check color-3">
                                                                         <label class="custom-check-container">
                                                                             <input type="checkbox" name="colorCheck3" id="colorCheck3">
                                                                             <span class="custom-check"></span>
@@ -647,8 +710,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>  
-                                                        </label>
-                                                                                                                 
+                                                        </label>                                                       
                                                     </div>
                                                 </form>
 
