Responzivita product layoutu
-responzivita levé navigace
-řádek s buttonama nad layoutem
-laďění

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <input class="menu-checkbox" type="checkbox" id="menu-checkbox">
                                 <div class="dropdown-menu big-menu">
                                         <label class="big-category-item dropdown-item" >Ruční nářadí
-                                            <input class="submenu-checkbox" type="checkbox" onclick="resetCheckbox(0)">
+                                            <input class="submenu-checkbox" type="checkbox" onclick="resetCheckbox(0,'submenu-checkbox')">
                                             <div class="big-category-menu double-col-dropdown" style="background-image: url('images/banner.jpg');">
                                                     <div class="container-fluid">
                                                         <div class="row dropdown-category-row">
@@ -172,7 +172,7 @@
                                         
                                         </label>
                                         <label class="big-category-item dropdown-item">Zahrádní potřeby
-                                            <input class="submenu-checkbox" type="checkbox" onclick="resetCheckbox(1)">
+                                            <input class="submenu-checkbox" type="checkbox" onclick="resetCheckbox(1,'submenu-checkbox')">
                                             <div class="big-category-menu double-col-dropdown" style="background-image: url('images/product.jpg');">
                                                 <label class="big-menu-container-label" for="menu-checkbox" onclick="void(0)">
                                                     <div class="container-fluid">
@@ -210,7 +210,7 @@
                                             </div>
                                         </label>
                                         <label class="big-category-item dropdown-item" >Power tool
-                                            <input class="submenu-checkbox" type="checkbox" onclick="resetCheckbox(2)">
+                                            <input class="submenu-checkbox" type="checkbox" onclick="resetCheckbox(2,'submenu-checkbox')">
                                             <div class="big-category-menu double-col-dropdown" style="background-image: url('images/news-image2.jpg');">
                                                 <label class="big-menu-container-label" for="menu-checkbox" onclick="void(0)">
                                                     <div class="container-fluid">
@@ -248,7 +248,7 @@
                                             </div>
                                         </label>
                                         <label class="big-category-item dropdown-item" >Ruční nářadí
-                                            <input class="submenu-checkbox" type="checkbox" onclick="resetCheckbox(3)">
+                                            <input class="submenu-checkbox" type="checkbox" onclick="resetCheckbox(3,'submenu-checkbox')">
                                             <div class="big-category-menu double-col-dropdown" style="background-image: url('images/product.jpg');">
                                                 <label class="big-menu-container-label" for="menu-checkbox" onclick="void(0)">
                                                     <div class="container-fluid">
