Oprava radio za check

--- a/productDetail.html
+++ b/productDetail.html
@@ -634,9 +634,9 @@
                                 <form class="product-settings" method="POST">
                                     <span> BARVA </span>
                                     <div class="product-select color-select">
-                                        <label class="color"><input class="check" name="color1" type="checkbox" onclick="resetCheckbox(0,'check')" ><div class="outer red"> <div class="inner red"></div> </div>  </label> 
-                                        <label class="color"><input disabled class="check" name="color1" type="checkbox" onclick="resetCheckbox(1,'check')"><div class="outer yellow"> <div class="inner yellow"></div> </div>  </label> 
-                                        <label class="color"><input class="check" name="color1" type="checkbox" onclick="resetCheckbox(2,'check')"><div class="outer grey"> <div class="inner grey"></div> </div>  </label> 
+                                        <label class="color"><input disabled class="check" name="color-check" type="radio"><div class="outer red"> <div class="inner red"></div> </div>  </label> 
+                                        <label class="color"><input  class="check" name="color-check" type="radio"><div class="outer yellow"> <div class="inner yellow"></div> </div>  </label> 
+                                        <label class="color"><input  class="check" name="color-check" type="radio"><div class="outer grey"> <div class="inner grey"></div> </div>  </label> 
                                     </div>
                                     <span> MATERIÁL </span>
                                     <div class="product-select material-select">
