Dokončení uživatelského účtu
-úprava profilu + hesla
-historie objednávek
-adresy
-navigace je již responzivní

-celý už. účet ještě nebyl absolutně detailně laděn, ale zatím z rychlého prolítnutí vypadá dobře

--- a/dashboard.html
+++ b/dashboard.html
@@ -564,13 +564,12 @@
                     <h3 class="product-layout-heading mt-2">Můj účet</h3>
                     <div class="row">
                         <div class="col-12 col-lg-3 account-navigation">
-                            <h4>Navigace</h4>
-                            <a href="#" class="account-nav-item active">Nástěnka</a>
-                            <a href="#" class="account-nav-item">Upravit profil</a>
-                            <a href="#" class="account-nav-item">Historie objednávek</a>
-                            <a href="#" class="account-nav-item">Adresy</a>
-                            <a href="#" class="account-nav-item">Změna hesla</a>
-                            <a href="#" class="account-nav-item">Odhlásit se</a>
+                            <h4 class="d-none d-lg-block">Navigace</h4>
+                            <a href="dashboard.html" class="account-nav-item active">Nástěnka</a>
+                            <a href="profile_edit.html" class="account-nav-item">Profil</a>
+                            <a href="order_history.html" class="account-nav-item">Objednávky</a>
+                            <a href="account_addresses.html" class="account-nav-item">Adresy</a>
+                            <a href="login.html" class="account-nav-item">Odhlásit se</a>
                         </div>
                         <div class="col account-content">
                             <div class="container-fluid">
@@ -578,30 +577,30 @@
                                     <div class="col-12 col-lg-6 col-md-6 content-col">
                                         <div class="wrapper dashboard-profile">
                                             <div class="profile-image">
-                                                <img class="img-fluid" src="images/avatar.jpg" >
+                                                <img class="img-fluid" src="images/avatar-2.jpg" >
                                             </div>
                                             <div class="profile-info">
-                                                <div class="name">Štěpán Suchánek</div>
-                                                <div class="email">suchanek.stepan1@gmail.com</div>
+                                                <div class="name">Někdo Kdo</div>
+                                                <div class="email">nejaky@uchvatny.mail</div>
                                             </div>
                                             <a class="btn-standard" href="#">Upravit profil</a>
                                         </div>
                                     </div>
                                     <div class="col-12 col-lg-6 col-md-6 content-col">
                                         <div class="wrapper address">
-                                            <h5 class="title">Štěpán Suchánek</h5>
+                                            <h5 class="title">Někdo Kdo</h5>
                                             <div class="block address-text">
-                                                Bezručova 223 <br>
-                                                551 01 Jaroměř
+                                                Pekelná 666 <br>
+                                                666 42 Zapadákov
                                             </div>
 
                                             <div class="block phone">
                                                 <div class="heading">Telefon</div>
-                                                +420 731 260 351
+                                                +420 646 260 646
                                             </div>
                                             <div class="block email">
                                                 <div class="heading">E-mailová adresa</div>
-                                                suchanek.stepan1@gmail.com
+                                                nejaky@uchvatny.mail
                                             </div>
 
                                             <a class="action" href="#">Upravit adresu</a>
