--- a/productDetail.html
+++ b/productDetail.html
@@ -789,6 +789,76 @@
                                         <div class="info-block">
                                             <h3 class="mb-5">Uživatelské hodnocení</h3>
 
+                                            <div class="container-fluid alt-reviews-container">
+                                                <div class="row">
+                                                    <div class="col-12 col-md-6 col-lg-3 alt-reviews-col">
+                                                        <div class="reviews-wrapper complete-reviews">
+                                                            <div class="reviews-number">5,0</div> 
+                                                            <div class="rating-stars">
+                                                                <i class="fas fa-star"></i>
+                                                                <i class="fas fa-star"></i>
+                                                                <i class="fas fa-star"></i>
+                                                                <i class="fas fa-star"></i>
+                                                                <i class="far fa-star"></i>
+                                                            </div>
+                                                            <div class="reviews-howmany-users">Hodnotilo 5 uživatelů</div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-12 col-md-6 col-lg-3 alt-reviews-col">
+                                                        <div class="reviews-wrapper summrary-reviews">
+                                                            <div class="summrary-line">
+                                                                <span> 5 </span>  <i class="fas fa-star"></i> 
+                                                                <div class="progress">
+                                                                    <div class="progress-bar bg-primary" style="width: 0" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                                </div>
+                                                                <div class="howmany"> 5x</div>
+                                                            </div>
+                                                            <div class="summrary-line">
+                                                                <span> 4 </span>  <i class="fas fa-star"></i> 
+                                                                <div class="progress">
+                                                                    <div class="progress-bar bg-primary" style="width: 0" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                                </div>
+                                                                <div class="howmany"> 5x</div>
+                                                            </div>
+                                                            <div class="summrary-line">
+                                                                <span> 3 </span>  <i class="fas fa-star"></i> 
+                                                                <div class="progress">
+                                                                    <div class="progress-bar bg-primary" style="width: 0" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                                </div>
+                                                                <div class="howmany"> 5x</div>
+                                                            </div>
+                                                            <div class="summrary-line">
+                                                                <span> 2 </span>  <i class="fas fa-star"></i> 
+                                                                <div class="progress">
+                                                                    <div class="progress-bar bg-primary" style="width: 0" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                                </div>
+                                                                <div class="howmany"> 5x</div>
+                                                            </div>
+                                                            <div class="summrary-line">
+                                                                <span> 1 </span>  <i class="fas fa-star"></i> 
+                                                                <div class="progress">
+                                                                    <div class="progress-bar bg-primary" style="width: 0" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                                </div>
+                                                                <div class="howmany"> 5x</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-12 col-md-6 col-lg-3 alt-reviews-col">
+                                                        <div class="reviews-wrapper customers-reviews">
+                                                            <div class="wrapper-in-wrapper">
+                                                                <div class="info-box"> <div class="heading">100+</div> <div class="info">zákazníků již zakoupilo</div> </div>
+                                                                <div class="info-box"> <div class="heading">100%</div> <div class="info">zákazníků doporučuje</div> </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-12 col-md-6 col-lg-3 alt-reviews-col">
+                                                        <div class="reviews-wrapper write-reviews">
+                                                                <a href="#"><i class="fas fa-pen"></i> Napište vlastní hodnocení </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                             <div class="reviews-carousel owl-carousel owl-theme">
                                                 <div class="reviews-block">
                                                     <div class="review">
