Dodělavka úpravy karty produktu
-dodělání pro list layout

-vše vypadá celkem funkčně :+1:

--- a/index.html
+++ b/index.html
@@ -1564,7 +1564,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4 d-lg-block d-none p-0">
+                        <div class="col-4 d-lg-block d-none">
                             <div class="container-fluid">
                                 <div class="row">
                                     <div class="col-12 product product-big">
